chore: Fix text overflow

--- a/web/src/layouts/Doc.css
+++ b/web/src/layouts/Doc.css
@@ -117,11 +117,6 @@ h6::before {
             }
         }
 
-        /* li > p { */
-        /*     display: inline; */
-        /*     margin: 0; */
-        /* } */
-
         li > p + p {
             display: block;
         }
@@ -129,9 +124,6 @@ h6::before {
         li {
             text-indent: 2ch hanging;
         }
-        /* li > p { */
-        /*     margin-block: 1lh; */
-        /* } */
         li:last-child {
             margin-bottom: 1lh;
         }
@@ -156,23 +148,6 @@ h6::before {
                 justify-content: space-between;
             }
 
-            /* a { */
-            /*     color: var(--blue); */
-            /*     text-decoration: none; */
-            /*     display: flex; */
-            /*     flex-direction: column; */
-            /*     --box-border-color: var(--background2); */
-            /*     outline: none; */
-            /**/
-            /*     &.next { */
-            /*         text-align: right; */
-            /*     } */
-            /**/
-            /*     &:hover, */
-            /*     &:focus { */
-            /*         --box-border-color: var(--red); */
-            /*     } */
-            /* } */
             a:focus:focus-visible {
                 color: var(--accent);
                 background-color: oklch(
@@ -244,29 +219,15 @@ pre.astro-code {
     code {
         background-color: unset;
         overflow: hidden;
-
         /* Diff markers */
-        /* span.diff.add { */
-        /*     background-color: #a6e3a135; */
-        /* } */
-        /**/
-        /* span.diff.remove { */
-        /*     background-color: #f38ba845; */
-        /* } */
+        span.diff.add {
+            background-color: #a6e3a135;
+        }
+        span.diff.remove {
+            background-color: #f38ba845;
+        }
     }
 }
-
-/* .astro-code, */
-/* .astro-code span { */
-/*     --shiki-dark-bg: var(--background1) !important; */
-/*     color: var(--shiki-dark) !important; */
-/*     background-color: var(--shiki-dark-bg) !important; */
-/*     /* Optional, if you also want font styles */
-*/
-/*     font-style: var(--shiki-dark-font-style) !important; */
-/*     font-weight: var(--shiki-dark-font-weight) !important; */
-/*     text-decoration: var(--shiki-dark-text-decoration) !important; */
-/* } */
 
 p:has(> img) {
     display: flex;
